# bookmark-manager

./: CMakeLists.txt
data/: CMakeLists.txt
po/: CMakeLists.txt  com.github.bartzaalberg.bookmark-manager.pot
src/: Application.vala  Bookmark.vala  ConfigFileReader.vala  ListBox.vala  ListBoxRow.vala  MainWindow.vala  SSHManager.vala  StackManager.vala
src/Components/: BookmarkForm.vala  HeaderBar.vala
src/Tests/: BookmarkTest.vala
src/Views/: AddBookmark.vala  EditBookmark.vala
